2006-03-10  Kristian Høgsberg  <krh@redhat.com>

	* Merge accel_indirect branch to HEAD.

2006-03-05  Kristian Høgsberg  <krh@redhat.com>

	* GL/glx/glxcmds.c (DoGetDrawableAttributes): Add
	GLX_Y_INVERTED_EXT to the drawable attributes we report.
	
2006-03-05  Kristian Høgsberg  <krh@redhat.com>

	* GL/glx/glxcmds.c (__glXCreateARGBConfig): Create the fbconfig
	for the composite 32 visual after the fact here.

	* GL/glx/glxdri.c (__glXDRIbindTexImage): Use 4bpp for 32 bit
	visuals too, but only fill the alpha channel for 24 depth
	drawables.

2006-03-03  Kristian Høgsberg  <krh@redhat.com>

	* GL/glx/glxdri.c (getDrawableInfo): Work around i915 driver that
	tries to render to drawable even if it no longer exists.
	Returning 0 cliprects (as dri_util.c does) doesn't seem to do it,
	so we set the width and height to 0.
	
	* GL/glx/g_disptab.h: 
	* GL/glx/glxcmdsswap.c: Fix a couple of warnings.

2006-03-03  Kristian Høgsberg  <krh@redhat.com>

	* GL/glx/glxdri.c (__glXDRIscreenProbe): Log full DRI driver path
	when dlopen() fails.

	* GL/glx/glxscreens.c (__glXInitScreens): Log the provider name
	when we initialize a GLX screen.

	* GL/symlink-mesa.sh: 
	* GL/mesa/swrast/Makefile.am: Update to work with mesa head.

2006-03-01  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* GL/glx/glxdri.c: (__glXDRIscreenProbe):
	Pass err_msg when dev_priv allocation fails.

2006-03-01  Kristian Høgsberg  <krh@redhat.com>

	* GL/glx/glxdri.c (__glXDRIscreenProbe): Handle failing allocation
	of dev_priv.
	
	* GL/glx/glxdri.c (__glXDRIscreenProbe): The DRI driver
	_mesa_free()'s the dev_priv passed in so we need to give it a
	copy.

2006-03-01  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* GL/glx/glxserver.h:
	Fix Xvfb, Xnest and Xprt build.

2006-02-28  Kristian Høgsberg  <krh@redhat.com>

	* GL/glx/glxdri.c (__glXDRIscreenProbe): Fix enter/leave confusion.

	* configure.ac: 
	* hw/xfree86/common/xf86Config.c (configServerFlags): Enable AIGLX