@@ -1,3 +1,12 @@
+2006-03-11  Eric Anholt  <anholt@FreeBSD.org>
+
+	reviewed by: jbarnes
+
+	* exa/exa_accel.c: (exaCopyNtoNTwoDir):
+	Make exaCopyNtoNTwoDir() call DoneCopy() at the end of each string of
+	consecutive Copy() calls (rather than exactly once at the end of the
+	function).
+
 2006-03-10  Kristian Høgsberg  <krh@redhat.com>
 
 	* Merge accel_indirect branch to HEAD.
